--- a/style.css
+++ b/style.css
@@ -1,4 +1,52 @@
-h1, p {
-    font-family: Lato;
-    color: orange;
+body {
+    margin: 0;
+    font-family: 'Helvetica';
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+  }
+  
+  code {
+    font-family: Arial, Helvetica, sans-serif;
+  }
+  
+  .app {
+    background: blue;
+    padding: 30px;
+    height: 100vh;
+  }
+  
+  .todo-list{
+    background: #fad502;
+    border-radius: 4px;
+    padding: 5px;
+    max-width: 400px;
+  }
+  
+  .todo{
+    background: rgb(21, 247, 0);
+    box-shadow: 1px 1px 1px rgba(0,0,0, 0.15);
+    padding: 3px 10px;
+    font-size: 24px;
+    margin-bottom: 6px;
+    border-radius: 3px;
+    display:flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  
+  .input{
+    width: 100%;
+    box-sizing: border-box;
+    border: 0;
+    border-radius: 4px;
+    box-shadow: none;
+    padding: 1rem;
+    height: 2.25em;
+    font-size: 24px;
+  }
+  
+  h1{
+    font-size: 2em;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    background-color: #0059fd;
   }
